--- a/css/css background.css
+++ b/css/css background.css
@@ -101,7 +101,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 .spurs {
   width: 100%;
   height: 890px;
-  background-image: url('../img/spurs.jpg');
+  background-image: url('../img/Spurs.jpg');
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -213,7 +213,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 .wizards {
   width: 100%;
   height: 890px;
-  background-image: url('../img/washington.jpg');
+  background-image: url('../img/washinton.jpg');
   background-repeat: no-repeat;
   background-size: contain;
 }
